[package]
name = "qudoku"
version = "0.1.0"
edition = "2021"
authors = ["conduition"]
description = "Shamir Secret Sharing implementation, including a novel nested threshold secret system to complement existing SSS groups."
readme = "README.md"
license = "Unlicense"
repository = "https://github.com/conduition/qudoku"
keywords = ["shamir", "secp256k1", "elliptic", "secret", "sharing"]

[dependencies]
num-traits = { version = "0.2.18", default-features = false }
secp = { version = "0.2.0", default-features = false, features = ["k256", "num-traits"] }
sha2 = { version = "0.10.8", default-features = false }
rand = { version = "0.8.5", default-features = false, optional = true, features = [] }

[dev-dependencies]
hex = "0.4.3"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }

[features]
default = []
rand = ["dep:rand", "secp/rand"]

[package.metadata.docs.rs]
all-features = true
